tests/ui/once_ttl_zero.stderr
error: `ttl` must be >= 1
 --> tests/ui/once_ttl_zero.rs:4:4
  |
4 | fn my_fn() -> i32 {
  |    ^^^^^
