tests/ui/once_ttl_zero.rs
use cached::once;

#[once(ttl = 0)]
fn my_fn() -> i32 {
    42
}

fn main() {}
